--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ body {
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  z-index: 2;
   width: 100vw;
   height: 2.5rem;
   padding: 0.2rem;
@@ -87,8 +88,7 @@ body {
 
 .main {
   grid-area: main;
-  width: 15rem;
-  margin: auto;
+  padding: 0 4rem;
 }
 
 .navbar .navbar__list {
@@ -125,4 +125,48 @@ body {
 }
 .navbar .navbar__list li .navbar__list--active {
   color: #75d3ff;
+}
+
+.container .container__slide {
+  position: relative;
+  z-index: 1;
+  max-width: 52rem;
+  margin: 0 auto;
+}
+.container .container__slide__img {
+  display: flex;
+  aspect-ratio: 14/5;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+}
+.container .container__slide__img::-webkit-scrollbar {
+  display: none;
+}
+.container .container__slide__img img {
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+.container .container__slide__nav {
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  z-index: 1;
+  bottom: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+.container .container__slide__nav a {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+.container .container__slide__nav a:hover {
+  opacity: 1;
 }/*# sourceMappingURL=main.css.map */
