--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
+    z-index: 2;
     width: 100vw;
     height: 2.5rem;
     padding: 0.2rem;
