--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -11,6 +11,7 @@
             padding-left: 1.5rem;
 
             a {
+                font-size: 1.5rem;
                 color: var.$colorWhite;
                 width: 100%;
                 position: relative;
