--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,73 @@ a:link {
 }
 
 img {
-  width: 40%;
+  width: 100%;
+}
+
+.slider {
+  width: 100%;
+  max-width: 100vw;
+  height: 25rem;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+}
+.slider .slider__list {
+  position: absolute;
+  width: max-content;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  transition: 1s;
+}
+.slider .slider__list img {
+  width: 100vw;
+  max-width: 100vw;
+  height: 100%;
+  object-fit: cover;
+}
+.slider .slider__buttons {
+  position: absolute;
+  top: 45%;
+  left: 2%;
+  width: 96%;
+  display: flex;
+  justify-content: space-between;
+}
+.slider .slider__buttons button {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.3333333333);
+  color: #FFFFFF;
+  border: none;
+  font-family: monospace;
+  font-weight: bold;
+  cursor: pointer;
+}
+.slider .slider__dots {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  color: #FFFFFF;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.slider .slider__dots li {
+  list-style: none;
+  width: 10px;
+  height: 10px;
+  background-color: #FFFFFF;
+  margin: 10px;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.slider .slider__dots li.active {
+  width: 30px;
 }
 
 body {
@@ -36,11 +102,12 @@ body {
   grid-area: footer;
   background-color: #031c30;
   margin-top: auto;
-  border-top: 1px solid #75d3ff;
+  padding-top: 1rem;
+  border-top: 2px solid #75d3ff;
 }
 .footer a {
   color: #505050;
-  font-size: 0.6rem;
+  font-size: 1.2rem;
   padding: 0 1rem;
   transition: 0.3s;
 }
@@ -54,7 +121,7 @@ body {
 }
 .footer .copyright {
   text-align: center;
-  font-size: 0.6rem;
+  font-size: 1rem;
   padding: 0.5rem;
   color: #505050;
 }
@@ -69,13 +136,13 @@ body {
   align-items: center;
   position: fixed;
   z-index: 2;
-  width: 100vw;
-  height: 2.5rem;
+  width: 100%;
+  height: 5rem;
   padding: 0.2rem;
-  border-bottom: 1px solid #75d3ff;
+  border-bottom: 2px solid #75d3ff;
 }
 .header .header__logo {
-  font-size: 1.5rem;
+  font-size: 3rem;
   cursor: pointer;
 }
 .header .header__logo a {
@@ -90,6 +157,10 @@ body {
   grid-area: main;
   padding: 0 4rem;
 }
+.main .--empty {
+  width: 100%;
+  height: 5rem;
+}
 
 .navbar .navbar__list {
   display: flex;
@@ -100,6 +171,7 @@ body {
   padding-left: 1.5rem;
 }
 .navbar .navbar__list li a {
+  font-size: 1.5rem;
   color: #FFFFFF;
   width: 100%;
   position: relative;
@@ -127,46 +199,41 @@ body {
   color: #75d3ff;
 }
 
-.container .container__slide {
-  position: relative;
-  z-index: 1;
-  max-width: 52rem;
-  margin: 0 auto;
+.main .about-us__title,
+.main .find-us__title {
+  color: #031c30;
+  font-size: 3rem;
+  padding: 2rem 2rem 0 2rem;
 }
-.container .container__slide__img {
-  display: flex;
-  aspect-ratio: 14/5;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+.main .about-us__title span,
+.main .find-us__title span {
+  color: #75d3ff;
 }
-.container .container__slide__img::-webkit-scrollbar {
-  display: none;
+.main .about-us__description,
+.main .find-us__description {
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
-.container .container__slide__img img {
-  flex: 1 0 100%;
-  scroll-snap-align: start;
-  object-fit: cover;
+.main .about-us,
+.main .find-us {
+  width: 100%;
+  border-bottom: 1px solid #031c30;
 }
-.container .container__slide__nav {
-  display: flex;
-  column-gap: 1rem;
-  position: absolute;
-  z-index: 1;
-  bottom: 0.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
+.main .about-us iframe,
+.main .find-us iframe {
+  width: 100%;
+  height: 25rem;
 }
-.container .container__slide__nav a {
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-  background-color: #f5f5f5;
-  opacity: 0.75;
-  transition: opacity ease 250ms;
+.main .logo {
+  margin-left: 2em;
 }
-.container .container__slide__nav a:hover {
-  opacity: 1;
+.main .about-us__logo {
+  font-size: 5em;
+  font-weight: bold;
+}
+.main .about-us__logo {
+  color: #031c30;
+}
+.main .about-us__logo span {
+  color: #75d3ff;
 }/*# sourceMappingURL=main.css.map */
