--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,12 +5,13 @@
     grid-area: footer;
     background-color: var.$color04;
     margin-top: auto;
-    border-top: 1px solid var.$color01;
+    padding-top: 1rem;
+    border-top: 2px solid var.$color01;
 
 
     a {
         color: var.$colorDarkGrey;
-        font-size: 0.6rem;
+        font-size: 1.2rem;
         padding: 0 1rem;
         transition: 0.3s;
     }
@@ -27,7 +28,7 @@
 
     .copyright {
         text-align: center;
-        font-size: 0.6rem;
+        font-size: 1rem;
         padding: 0.5rem;
         color: var.$colorDarkGrey;
     }
