--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,12 +11,12 @@
     align-items: center;
     position: fixed;
     z-index: 2;
-    width: 100vw;
-    height: 2.5rem;
+    width: 100%;
+    height: 5rem;
     padding: 0.2rem;
-    border-bottom: 1px solid var.$color01;
+    border-bottom: 2px solid var.$color01;
     .header__logo {
-        font-size: 1.5rem;
+        font-size: 3rem;
         cursor: pointer;
 
         a {
