--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -1,2 +1,48 @@
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mix;
+
+.main {
+
+    .about-us__title,
+    .find-us__title {
+        color: var.$color04;
+        font-size: 3rem;
+        padding: 2rem 2rem 0 2rem;
+
+        span {
+            color: var.$color01;
+        }
+    }
+
+    .about-us__description,
+    .find-us__description {
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+
+    .about-us,
+    .find-us {
+        width: 100%;
+        border-bottom: 1px solid var.$color04;
+
+        iframe {
+            width: 100%;
+            height: 25rem;
+        }
+    }
+
+    .logo {
+        margin-left: 2em;
+    }
+
+    .about-us__logo {
+        font-size: 5em;
+        font-weight: bold;
+    }
+    .about-us__logo{
+    color: var.$color04;
+    span {
+        color: var.$color01;
+    }
+    }
+}
