--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -15,3 +15,10 @@ $color04: #031c30;
 $colorWhite: #FFFFFF;
 $colorGrey: #f5f5f5;
 $colorDarkGrey: #505050;
+$colorLink: #4d90f7;
+$colorLinked: #3675cb;
+
+$colorAdd: #23C552;
+$colorRemove: #F84F31;
+
+$borderRadius: 10px;
