--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -22,12 +22,16 @@
 
     .about-us,
     .find-us {
+        padding-bottom: 0.5rem;
         width: 100%;
         border-bottom: 1px solid var.$color04;
 
         iframe {
+            margin-top: 1rem;
             width: 100%;
             height: 25rem;
+            border: none;
+            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
         }
     }
 
