--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,2 +1,145 @@
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mix;
+
+.contact {
+    margin: 4rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .contact__form,
+    .contact__help {
+        max-width: 40rem;
+        width: 35%;
+        padding: 1rem;
+        min-width: 25rem;
+        // border: 1px solid red;
+        height: fit-content;
+    }
+
+    .contact__form {
+        @include mix.shadow();
+
+        form {
+            display: flex;
+            flex-direction: column;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            font-weight: bold;
+
+            label {
+                padding-left: 0.5rem;
+            }
+
+            .form-flex {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+
+                div:first-of-type {
+                    padding-right: 1rem;
+                }
+
+                div:last-of-type {
+                    padding-left: 1rem;
+                }
+            }
+
+            input:focus,
+            textarea:focus {
+                outline: none;
+                outline: 1px solid var.$color01;;
+            }
+
+            input[type="text"],
+            input[type="email"],
+            input[type="number"],
+            textarea {
+                margin-bottom: 1rem;
+                margin-top: 0.5rem;
+                width: 100%;
+                height: 2.5rem;
+                border: 1px solid var.$color01;
+                border-radius: 3px;
+                padding: 0 0.4rem;
+                font-size: 1.2rem;
+            }
+
+            input[type="number"]::-webkit-inner-spin-button,
+            input[type="number"]::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            input[type="submit"] {
+                cursor: pointer;
+                height: 2.5rem;
+                border-radius: 3px;
+                border: none;
+                border: 1px solid var.$color02;
+                background-color: var.$color03;
+                color: var.$colorGrey;
+                font-weight: bold;
+                letter-spacing: 2px;
+                font-size: 1rem;
+            }
+
+            input[type="submit"]:hover {
+                border: 1px solid var.$color04;
+                background-color: var.$color01;
+            }
+
+            #additional-details {
+                padding: 0.4rem;
+                height: 6rem;
+                resize: vertical;
+            }
+        }
+
+        .contact__form__info {
+            margin: 1rem 0;
+            padding-top: 1rem;
+            border-top: 1px solid var.$colorGrey;
+
+            p {
+                margin: -0.5rem;
+
+                span {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+
+    .contact__help {
+        h3 {
+            font-size: 3rem;
+            text-transform: capitalize;
+        }
+
+        p {
+            margin: 1rem 0;
+            font-size: 1.5rem;
+        }
+
+        h4 {
+            color: var.$color03;
+            letter-spacing: 1px;
+            margin-bottom: 0.7rem;
+        }
+
+        .container {
+            display: flex;
+            gap: 2px;
+            justify-content: space-around;
+
+            .container__item {
+                width: 7rem;
+                height: 7rem;
+                opacity: 0.6;
+            }
+        }
+    }
+}
