--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ img {
   background-color: #23C552;
   color: #f5f5f5;
   font-weight: bold;
+  visibility: hidden;
 }
 
 .button--add:hover {
@@ -50,11 +51,17 @@ img {
   background-color: #F84F31;
   color: #f5f5f5;
   font-weight: bold;
+  visibility: hidden;
 }
 
 .button--remove:hover {
   border: 1px solid rgb(255, 88, 88);
   background-color: #ff8e7a;
+}
+
+.button--remove:active,
+.button--add:active {
+  transform: translateY(1.5px);
 }
 
 .slider {
@@ -404,17 +411,17 @@ body {
 .store {
   margin: 3rem auto;
 }
-.store h2.sectionTitle {
+.store h2.section__title {
   width: 100%;
   letter-spacing: 1.5px;
 }
-.store h2.sectionTitle a {
+.store h2.section__title a {
   font-weight: 300;
   font-size: 1rem;
   padding-left: 0.5rem;
   color: #4d90f7;
 }
-.store h2.sectionTitle a:hover {
+.store h2.section__title a:hover {
   color: #3675cb;
 }
 .store .store__guarantee {
@@ -467,10 +474,14 @@ body {
   transition: all 0.3s;
 }
 .store .store__browser .browser {
-  width: 35%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .store .store__browser .browser form {
   position: relative;
+  width: 40%;
 }
 .store .store__browser .browser input {
   width: 100%;
@@ -480,9 +491,6 @@ body {
   font-size: 1.4rem;
   padding: 8px 50px 8px 15px;
   border: 1px solid #75d3ff;
-}
-.store .store__browser .browser input:focus {
-  outline: 1px solid #75d3ff;
 }
 .store .store__browser .browser button {
   position: absolute;
@@ -509,7 +517,11 @@ body {
   position: absolute;
   top: 20%;
 }
+.store .store__browser .browser input:focus {
+  outline: 1px solid #75d3ff;
+}
 .store .store__browser .cart {
+  margin-left: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -544,7 +556,7 @@ body {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.45);
   border-radius: 10px;
   width: 18rem;
-  height: 25rem;
+  height: 23rem;
   padding: 1rem;
   margin-bottom: 2rem;
   position: relative;
@@ -581,6 +593,12 @@ body {
   background-color: #FFFFFF;
   box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.45);
   transform: scale(1.004);
+}
+.store .store__products .store__card:hover .button--add,
+.store .store__products .store__card:hover .button--remove,
+.store .store__offers .store__card:hover .button--add,
+.store .store__offers .store__card:hover .button--remove {
+  visibility: visible;
 }
 .store .store__offers .store__card span {
   color: rgb(93, 94, 95);
