--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -41,3 +41,25 @@
 .button--add:active {
     transform: translateY(1.5px)
 }
+
+
+.add--product {
+    cursor: pointer;
+    height: 2.5rem;
+    padding: 0.6rem 0.8rem;
+    // width: 10rem;
+    border-radius: 3px;
+    border: none;
+    border: 1px solid var.$color02;
+    background-color: var.$color03;
+    color: var.$colorGrey;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-size: 1rem;
+
+    &:hover {
+        border: 1px solid var.$color04;
+        background-color: #58abff;
+        color: var.$colorWhite;
+    }
+}
