--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -72,7 +72,7 @@
         justify-content: space-between;
         align-items: center;
         position: relative;
-        margin: 3rem auto;
+        margin: 3rem auto 1.5rem;
         padding: 0.4rem;
         transition: all 0.3s;
 
@@ -151,6 +151,9 @@
         @include mix.shadow();
     }
 
+    .store__addproduct {
+        margin-bottom: 1.5rem;
+    }
     .store__products,
     .store__offers {
         width: 100%;
